--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon dist/index.js",
+    "create:migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "@mikro-orm/migrations": "^4.0.3",
     "@mikro-orm/postgresql": "^4.0.3",
     "apollo-server-express": "^2.17.0",
+    "argon2": "^0.27.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "pg": "^8.3.3",
